--- a/index.html
+++ b/index.html
@@ -37,10 +37,16 @@
         <a href="https://vincentonepointone.github.io/resume/">Old Resume</a>
         <br>
         <a href="https://github.com/vincentonepointone/resume">Repo</a> 
+        <hr>
         <h3>Birthday Card</h3>
         <a href="https://vincentonepointone.github.io/happy/">Happy</a>
         <br>
         <a href="https://github.com/vincentonepointone/happy">Repo</a>
+        <hr>
+        <h3>Bootsrap PC Store</h3>
+        <a href="https://vincentonepointone.github.io/PC-Catalog/public/index.html">PC Store</a>
+        <br>
+        <a href="https://github.com/vincentonepointone/PC-Catalog">Repo</a>
     </div>
 
     
