--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
         body {
             background: rgb(56, 51, 51);
         }
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 45%; 
+            margin: auto; 
+            border: 2px solid bisque;
+        }
     </style>
 </head>
 <body>
-    <div style="padding:0 100px 50px 100px; width: 45%; margin: auto; border: 2px solid bisque;">
+    <div class="container">
         <i> <u><h1>Github Pages, Pages</h1></u> </i>
          <h3>CSS road signs and study material</h3>
         <a href="https://vincentonepointone.github.io/css-road-signs-and-licence-studymaterial/index.html">CSS road signs</a>
