--- a/index.html
+++ b/index.html
@@ -22,10 +22,23 @@
         text-align: center;
       }
       a {
+        font-size: 24px;
         color: rgb(36, 219, 30);
+        border: 0.5px solid white;
+        text-decoration: none;
+        background: black;
+        padding: 10px 20px;
+        line-height: 60px;
+      }
+
+      a:hover, a:focus {
+        animation-name: link;
+        animation-duration: 10s;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count: infinite;
       }
       body {
-        background: rgb(56, 51, 51);
+        background: black;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -33,6 +46,7 @@
       }
 
       .container {
+        
         padding: 1vw 10vw;
         width: 45%;
         border: 2px solid bisque;
@@ -43,12 +57,40 @@
         animation-timing-function: ease-in-out;
         animation-iteration-count: infinite;
       }
-            @keyframes example {
-  0%   {box-shadow: 0.8em 0.8em 9em 1em rgb(36, 218, 30);}
-  25%  {box-shadow: 0.8em 0.8em 9em 1em rgb(218, 30, 30);}
-  50%  {box-shadow: 0.8em 0.8em 9em 1em rgb(86, 30, 218);}
-  75%  {box-shadow: 0.8em 0.8em 9em 1em rgb(30, 65, 218);}
-  100% {box-shadow: 0.8em 0.8em 9em 1em rgb(23, 255, 2);}
+      @keyframes example {
+        0% {
+          box-shadow: 0.8em 0.8em 9em 1em rgb(36, 218, 30);
+        }
+        25% {
+          box-shadow: 0.8em 0.8em 9em 1em rgb(218, 30, 30);
+        }
+        50% {
+          box-shadow: 0.8em 0.8em 9em 1em rgb(86, 30, 218);
+        }
+        75% {
+          box-shadow: 0.8em 0.8em 9em 1em rgb(30, 65, 218);
+        }
+        100% {
+          box-shadow: 0.8em 0.8em 9em 1em rgb(23, 255, 2);
+        }
+      }
+ 
+      @keyframes link {
+        0% {
+          box-shadow: 0.1em 0.1em 0.5em 0.1em rgb(36, 218, 30);
+        }
+        25% {
+          box-shadow: 0.1em 0.1em 0.5em 0.1em rgb(218, 30, 30);
+        }
+        50% {
+          box-shadow: 0.1em 0.1em 0.5em 0.1em rgb(86, 30, 218);
+        }
+        75% {
+          box-shadow: 0.1em 0.1em 0.5em 0.1em rgb(30, 65, 218);
+        }
+        100% {
+          box-shadow: 0.1em 0.1em 0.5em 0.1em rgb(23, 255, 2);
+        }
       }
       @media only screen and (max-width: 600px) {
         h1 {
@@ -56,6 +98,9 @@
         }
         .container {
           width: 70%;
+        }
+        a {
+          font-size: 18px;
         }
       }
     </style>
