Update ulr to new account for new username index.html

--- a/index.html
+++ b/index.html
@@ -130,54 +130,54 @@
       </i>
       <h3>CSS road signs and study material</h3>
       <a
-        href="https://vincentonepointone.github.io/css-road-signs-and-licence-studymaterial/index.html"
+        href="https://vincent-du-plessis.github.io/css-road-signs-and-licence-studymaterial/index.html"
         >CSS road signs</a
       >
       <br />
       <a
-        href="https://github.com/vincentonepointone/css-road-signs-and-licence-studymaterial"
+        href="https://github.com/vincent-du-plessis/css-road-signs-and-licence-studymaterial"
         >Repo</a
       >
       <hr />
       <h3>Meme Site hosted on GCP</h3>
       <a href="https://meme-site-login.ew.r.appspot.com/">Meme Site</a>
       <br />
-      <a href="https://github.com/vincentonepointone/meme-site"
+      <a href="https://github.com/vincent-du-plessis/meme-site"
         >Repo (Forked from)</a
       >
       <hr />
       <h3>Freelance Website</h3>
       <a
-        href="https://vincentonepointone.github.io/Viable-Websites/public/index.html"
+        href="https://vincent-du-plessis.github.io/Viable-Websites/public/index.html"
         >Viabe Websites</a
       >
       <br />
-      <a href="https://github.com/vincentonepointone/Viable-Websites">Repo</a>
+      <a href="https://github.com/vincent-du-plessis/Viable-Websites">Repo</a>
       <hr />
       <h3>Task Tracker</h3>
-      <a href="https://vincentonepointone.github.io/LifesExecutions/index.html"
+      <a href="https://vincent-du-plessis.github.io/LifesExecutions/index.html"
         >Lifes' Executions</a
       >
       <br />
-      <a href="https://github.com/vincentonepointone/LifesExecutions">Repo</a>
+      <a href="https://github.com/vincent-du-plessis/LifesExecutions">Repo</a>
       <hr />
       <h3>Old Resume</h3>
-      <a href="https://vincentonepointone.github.io/resume/">Old Resume</a>
+      <a href="https://vincent-du-plessis.github.io/resume/">Old Resume</a>
       <br />
-      <a href="https://github.com/vincentonepointone/resume">Repo</a>
+      <a href="https://github.com/vincent-du-plessis/resume">Repo</a>
       <hr />
       <h3>Birthday Card</h3>
-      <a href="https://vincentonepointone.github.io/happy/">Happy</a>
+      <a href="https://vincent-du-plessis.github.io/happy/">Happy</a>
       <br />
-      <a href="https://github.com/vincentonepointone/happy">Repo</a>
+      <a href="https://github.com/vincent-du-plessis/happy">Repo</a>
       <hr />
       <h3>Bootsrap PC Store</h3>
       <a
-        href="https://vincentonepointone.github.io/PC-Catalog/public/index.html"
+        href="https://vincent-du-plessis.github.io/PC-Catalog/public/index.html"
         >PC Store</a
       >
       <br />
-      <a href="https://github.com/vincentonepointone/PC-Catalog">Repo</a>
+      <a href="https://github.com/vincent-du-plessis/PC-Catalog">Repo</a>
     </div>
   </body>
 </html>
